k8s/mariadb/classic/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: mariadb
  serviceName: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: docker.io/bitnami/mariadb:10.3-debian-10
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-persistent-storage
      restartPolicy: Always
  volumeClaimTemplates:
  - metadata:
      labels:
        app: mariadb
      name: mariadb-persistent-storage
    spec:
      storageClassName: hostpath    
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
