k8s/mariadb/classic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  ports:
    - port: 3306
      targetPort: 3306    
      name: mysql
  selector:
    app: mariadb
