k8s/mariadb/classic/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mariadb
spec:
  ingress:
  - ports:
    - port: 3306
      protocol: TCP
  podSelector:
    matchLabels:
      app: mariadb
